--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,25 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".onClickMember">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".onClickMember"></activity>
+        <activity android:name=".profile" />
+        <activity android:name=".Edit_Profile" />
+        <activity android:name=".onSearch" />
+        <activity android:name=".onFilterClick" />
+        <activity android:name=".onSettingClicked" />
+        <activity android:name=".onClickJob"
+            android:label="More">
+        </activity>
+
     </application>
 
 </manifest>
