--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.github.markushi:circlebutton:1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile 'me.drakeet.materialdialog:library:1.2.8'
+    compile 'com.github.markushi:circlebutton:1.1'
+    compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+
+
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.slider:library:1.1.5@aar'
 
 }
