--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
     </activity><activity android:name=".sanghosti" android:label="Sanghosti">
     </activity><activity android:name=".microsoft" android:label="Microsoft Innovation Center">
     </activity><activity android:name=".OnMemberClick" />
+
+
     </application>
+    <uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>
 
 </manifest>
