--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,27 +17,39 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+
+
+
     compile 'com.github.markushi:circlebutton:1.1'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+
+    //    Networking Library
+    //    Image Loading Library
+    
+
+//    Butterknife for view Injections
+        compile 'com.jakewharton:butterknife:8.1.0'
+compile 'com.github.markushi:circlebutton:1.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'me.drakeet.materialdialog:library:1.2.8'
-    compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-
-    compile 'me.biubiubiu.justifytext:library:1.1'
-    compile 'com.android.volley:volley:1.0.0'
-
-    compile 'com.squareup.picasso:picasso:2.3.2'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
+    compile 'me.biubiubiu.justifytext:library:1.1'
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.squareup.picasso:picasso:2.3.2'
+    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
 
+    compile "com.mikepenz:iconics-core:2.6.6@aar"
+
+    compile 'com.mikepenz:fontawesome-typeface:4.6.0.1@aar'
 }
