--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
+        android:name=".Application.MainApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name=".PreLogin.ActivitySplashScreen"
@@ -29,9 +30,9 @@
         <activity
             android:name=".PostLogin.ActivitySettings"
             android:label="More" />
-        <activity
-            android:name=".Job.OnJobClick"
-            android:label="Job Offerings" />
+        <!--<activity-->
+            <!--android:name=".Job.OnJobClick"-->
+            <!--android:label="Job Offerings" />-->
         <activity
             android:name=".About_app"
             android:label="About App" />
