--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:name=".Application.MainApplication"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".PreLogin.ActivitySplashScreen"
+            android:name=".activities.PreLogin.ActivitySplashScreen"
             android:label="Alumni">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +28,7 @@
             android:name=".onFilterClick"
             android:label="Filter" />
         <activity
-            android:name=".PostLogin.ActivitySettings"
+            android:name=".activities.PostLogin.ActivitySettings"
             android:label="More" />
         <!--<activity-->
             <!--android:name=".Job.OnJobClick"-->
@@ -48,60 +48,60 @@
         <activity
             android:name=".Job.jobPost"
             android:label="Post A Job" />
-        <activity android:name=".PreLogin.Login"></activity>
-        <activity android:name=".PreLogin.SignUp"></activity>
-        <activity android:name=".PostLogin.MainScreen"></activity>
+        <activity android:name=".activities.PreLogin.Login"></activity>
+        <activity android:name=".activities.PreLogin.SignUp"></activity>
+        <activity android:name=".activities.PostLogin.MainScreen"></activity>
         <activity
-            android:name=".EventPage"
+            android:name=".deepak.events.EventPage"
             android:label="Events"></activity>
         <activity
-            android:name=".Deepak.Events.AboutCollege.About_college"
+            android:name=".deepak.about_college.About_college"
             android:label="ACEIT"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Technica"
+            android:name=".deepak.events.Technica"
             android:label="Technica Naitus"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Shrandhan"
+            android:name=".deepak.events.Shrandhan"
             android:label="Shrandhanjali"></activity>
         <activity
-            android:name=".Deepak.Events.Events.AryaRatan"
+            android:name=".deepak.events.AryaRatan"
             android:label="Arya Ratan"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Eupo"
+            android:name=".deepak.events.Eupo"
             android:label="Euphonious"></activity>
         <activity
-            android:name=".Deepak.Events.Events.AryaCup"
+            android:name=".deepak.events.AryaCup"
             android:label="Arya Cup"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Victory"
+            android:name=".deepak.events.Victory"
             android:label="Victory"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Exergie"
+            android:name=".deepak.events.Exergie"
             android:label="Exergie"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Social"
+            android:name=".deepak.events.Social"
             android:label="Social Event"></activity>
         <activity
-            android:name=".Deepak.Events.Events.TopGun"
+            android:name=".deepak.events.TopGun"
             android:label="TopGun"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Auto"
+            android:name=".deepak.events.Auto"
             android:label="Auto"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Zephr"
+            android:name=".deepak.events.Zephr"
             android:label="Zephr"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Engineer"
+            android:name=".deepak.events.Engineer"
             android:label="Engineer Day"></activity>
         <activity
-            android:name=".Deepak.Events.Events.Confernce"
+            android:name=".deepak.events.Confernce"
             android:label="International Conference"></activity>
         <activity
-            android:name=".Deepak.Events.Events.sanghosti"
+            android:name=".deepak.events.sanghosti"
             android:label="Sanghosti"></activity>
         <activity
-            android:name=".Deepak.Events.Events.microsoft"
+            android:name=".deepak.events.microsoft"
             android:label="Microsoft Innovation Center"></activity>
         <activity android:name=".MemberClick" />
         <activity android:name=".ActivityMember"></activity>
