Minor Restructure, Bus Implemented,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -104,7 +104,7 @@
             android:name=".deepak.events.microsoft"
             android:label="Microsoft Innovation Center"></activity>
         <activity android:name=".MemberClick" />
-        <activity android:name=".ActivityMember"></activity>
+        <activity android:name=".activities.PostLogin.ActivityMember"></activity>
     </application>
 
 </manifest>
