--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-//    Butterknife for view Injections
-    
-
-//    Networking Library
-    
-    //    Image Loading Library1-1
-    
-    
-//    iconics & Fontawsome
-    
-//Stetho
     compile 'com.github.markushi:circlebutton:1.1'
-    compile 'com.jakewharton:butterknife:8.1.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'me.drakeet.materialdialog:library:1.2.8'
@@ -53,4 +42,5 @@ dependencies {
     compile 'com.mikepenz:iconics-core:2.6.6@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.6.0.1@aar'
     compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.squareup:otto:+'
 }
