View pager implemented on dummy data set

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             android:name=".Job.jobProfile"
             android:label="Company Profile" />
         <activity
-            android:name=".Job.FragmentPostJob"
+            android:name=".Fragments.FragmentPostJob"
             android:label="Post A Job" />
         <activity android:name=".activities.PreLogin.Login"></activity>
         <activity android:name=".activities.PreLogin.SignUp"></activity>
