--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:name=".Application.MainApplication"
+        android:name=".application.MainApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.PreLogin.ActivitySplashScreen"
