--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:label="Company Profile" />
         <activity android:name=".activities.PreLogin.Login"/>
         <activity android:name=".activities.PreLogin.SignUp"/>
-        <activity android:name=".activities.PostLogin.MainScreen"/>
+        <activity android:name=".activities.PostLogin.ActivityMainScreen"/>
 
         <activity
             android:name=".deepak.about_college.About_college"
