--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,23 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+
+    }
+    productFlavors {
+        dev {
+
+        }
+        experimental {
+
+
+            jackOptions {
+                enabled true
+            }
+        }
+        prod {
+
+        }
     }
     buildTypes {
         release {
