--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,12 @@ dependencies {
     //tasty toast
 
     compile 'com.sdsmdg.tastytoast:tastytoast:0.0.4'
+
+    repositories {
+        mavenCentral()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+    }
+
+
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
