--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,14 @@ dependencies {
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
     }
 
 
+    //ACTIVE ANDROID for database
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+
+
+    // for check box in getProfile data
+    compile 'com.github.lguipeng:AnimCheckBox:1.0.0'
 }
