--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,21 +40,30 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+
+    //circular button on main screen
     compile 'com.github.markushi:circlebutton:1.1'
+
+    // ButterKnife
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+
     compile 'me.drakeet.materialdialog:library:1.2.8'
     compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.slider:library:1.1.5@aar'
-    compile 'me.biubiubiu.justifytext:library:1.1'
-    compile 'com.android.volley:volley:1.0.0'
+
+    // Picasso
     compile 'com.squareup.picasso:picasso:2.3.2'
+
+
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
+
+    // Image Iconincs And font awesome
     compile 'com.mikepenz:iconics-core:2.6.6@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.6.0.1@aar'
 
@@ -70,7 +79,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     //tasty toast
-
     compile 'com.sdsmdg.tastytoast:tastytoast:0.0.4'
 
     repositories {
@@ -86,4 +94,6 @@ dependencies {
 
     // for check box in getProfile data
     compile 'com.github.lguipeng:AnimCheckBox:1.0.0'
+
+//    compile 'gun0912.ted:tedbottompicker:1.0.3'
 }
