--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
         <activity android:name=".activities.PostLogin.MainScreenActivity"/>
         <activity android:name=".activities.PostLogin.PostLoginActivity"/>
         <activity android:name=".activities.PreLogin.MainActivity"/>
+
+
+        <meta-data android:name="AA_DB_NAME" android:value="members.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="2" />
     </application>
 
 </manifest>
