--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
 
         <meta-data android:name="AA_DB_NAME" android:value="members.db" />
         <meta-data android:name="AA_DB_VERSION" android:value="2" />
+        <meta-data android:name="AA_MODELS" android:value="com.example.ashish.alumini.network.models.Temp" />
     </application>
 
 </manifest>
