yahoo db connection done + will fetch from db in case of call filure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,8 @@
         <activity android:name=".activities.PreLogin.MainActivity"/>
 
 
-        <meta-data android:name="AA_DB_NAME" android:value="members.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="2" />
+        <meta-data android:name="AA_DB_NAME" android:value="alumni.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
         <meta-data android:name="AA_MODELS" android:value="com.example.ashish.alumini.network.models.Temp" />
     </application>
 
