--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,8 +32,9 @@
 
 
         <meta-data android:name="AA_DB_NAME" android:value="alumni.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
-        <meta-data android:name="AA_MODELS" android:value="com.example.ashish.alumini.network.models.Temp" />
+        <meta-data android:name="AA_DB_VERSION" android:value="2" />
+        <meta-data android:name="AA_MODELS" android:value="com.example.ashish.alumini.network.models.MemberInstanceModel,
+        com.example.ashish.alumini.network.models.JobInstanceModel" />
     </application>
 
 </manifest>
