refractoring + deleting useless files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:name=".application.MyApplication"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.PreLogin.ActivitySplashScreen"
+            android:name=".activities.pre_login.ActivitySplashScreen"
             android:label="Alumni">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +24,11 @@
         </activity>
 
 
-        <activity android:name=".activities.PreLogin.Login"/>
-        <activity android:name=".activities.PreLogin.SignUp"/>
-        <activity android:name=".activities.PostLogin.MainScreenActivity"/>
-        <activity android:name=".activities.PostLogin.PostLoginActivity"/>
-        <activity android:name=".activities.PreLogin.MainActivity"/>
+        <activity android:name=".activities.pre_login.Login"/>
+        <activity android:name=".activities.pre_login.SignUp"/>
+        <activity android:name=".activities.post_login.MainScreenActivity"/>
+        <activity android:name=".activities.post_login.PostLoginActivity"/>
+        <activity android:name=".activities.pre_login.MainActivity"/>
 
 
         <meta-data android:name="AA_DB_NAME" android:value="alumni.db" />
