--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
     }
     buildTypes {
         release {
+//            shrinkResources true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -67,7 +68,6 @@ dependencies {
     compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.slider:library:1.1.5@aar'
 
     // Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -107,10 +107,7 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 
 
-    // for check box in getProfile data
-    compile 'com.github.lguipeng:AnimCheckBox:1.0.0'
-
-//    compile 'gun0912.ted:tedbottompicker:1.0.3'
+    
 
     // material progress bar
     compile 'me.zhanghai.android.materialprogressbar:library:1.1.7'
