orientation handled by using dtatic global data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".activities.pre_login.Login"/>
         <activity android:name=".activities.pre_login.SignUp"/>
         <activity android:name=".activities.post_login.MainScreenActivity"/>
-        <activity android:name=".activities.post_login.PostLoginActivity"/>
+        <activity android:name=".activities.post_login.PostLoginActivity"
+            android:configChanges="orientation|keyboardHidden" />
         <activity android:name=".activities.pre_login.MainActivity"/>
 
 
