changing menu visibility

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
 
         <activity android:name=".activities.pre_login.Login"/>
         <activity android:name=".activities.pre_login.SignUp"/>
-        <activity android:name=".activities.post_login.MainScreenActivity"/>
+        <activity android:name=".activities.post_login.MainScreenActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize" />
 
         <activity android:name=".activities.post_login.PostLoginActivity"
             android:configChanges="orientation|keyboardHidden"
