--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,13 @@ repositories {
 
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion '23.0.0'
 
     defaultConfig {
         applicationId "com.example.ashish.alumini"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
 
@@ -33,7 +33,6 @@ android {
 
         }
         experimental {
-
 
             jackOptions {
                 enabled true
@@ -72,11 +71,11 @@ dependencies {
     // Picasso
     compile 'com.squareup.picasso:picasso:2.5.2'
 
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
 
     // Image Iconincs And font awesome
     compile 'com.mikepenz:iconics-core:2.6.6@aar'
@@ -121,8 +120,7 @@ dependencies {
         transitive = true;
     }
 
-
-
+    // progress wheel
     compile 'com.pnikosis:materialish-progress:1.7'
 
 }
